# python_packaging_practice

./: LICENSE  setup.cfg
